[workspace.package]
version = "0.0.0"
authors = ["Moses Palmér <mosespalmer@gmail.com>"]
edition = "2021"

[workspace.dependencies]
actix = "0.13"
actix-http = "3.4"
actix-rt = "2.9"
actix-web = "4.4"
async-trait = "0.1"
bus = "2.4"
futures = "0.3"
thiserror = "1.0"
type-map = "0.5"

[workspace.dependencies.cbor4ii]
version = "0.3"
features = ["serde1"]

[workspace.dependencies.mobc]
version = "0.8"
features = ["tokio"]

[workspace.dependencies.redis]
version = "0.23"
features = ["aio", "tokio-comp"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace]
members = [
    "crates/cache",
    "crates/channel",
    "weru",
]
