[workspace.package]
version = "0.0.0"
authors = ["Moses Palmér <mosespalmer@gmail.com>"]
edition = "2021"

[workspace.dependencies]
actix = "0.13"
actix-http = "3.4"
actix-rt = "2.9"
actix-session = "0.8"
actix-web = "4.4"
actix-web-actors = "4.2"
anyhow = "1.0"
async-trait = "0.1"
bus = "2.4"
env_logger = "0.10"
futures = "0.3"
log = "0.4"
thiserror = "1.0"
toml = "0.8"
type-map = "0.5"

[workspace.dependencies.cbor4ii]
version = "0.3"
features = ["serde1"]

[workspace.dependencies.lettre]
default-features = false
version = "0.11"
features = ["builder", "rustls-tls", "serde", "tokio1", "tokio1-rustls-tls"]

[workspace.dependencies.libsqlite-sys]
version = "0.26"
features = ["bundled"]

[workspace.dependencies.mobc]
version = "0.8"
features = ["tokio"]

[workspace.dependencies.pulldown-cmark]
default-features = false
version = "0.9"

[workspace.dependencies.redis]
version = "0.23"
features = ["aio", "tokio-comp"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.sqlx]
version = "0.7.1"
features = ["chrono", "macros", "migrate", "runtime-tokio"]

[workspace]
members = [
    "crates/cache",
    "crates/channel",
    "crates/database",
    "crates/email",
    "crates/macros",
    "crates/session",
    "weru",
]
