[package]
name = "weru"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
actix = { workspace = true }
actix-http = { workspace = true }
actix-rt = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
futures.workspace = true

[dependencies.weru-cache]
optional = true
path = "../crates/cache"

[dependencies.weru-channel]
optional = true
path = "../crates/channel"

[dependencies.weru-database]
optional = true
path = "../crates/database"

[dependencies.weru-macros]
optional = true
path = "../crates/macros"


[features]
default = ["cache", "channel", "database", "macros"]
cache = ["weru-cache"]
channel = ["weru-channel"]
database = ["weru-database"]
macros = ["weru-macros"]
