[package]
name = "weru"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
actix = { workspace = true }
actix-http = { workspace = true }
actix-rt = { workspace = true }
actix-session = { workspace = true }
actix-web-actors = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
futures.workspace = true

[dependencies.weru-cache]
optional = true
path = "../crates/cache"

[dependencies.weru-channel]
optional = true
path = "../crates/channel"

[dependencies.weru-database]
optional = true
path = "../crates/database"

[dependencies.weru-email]
optional = true
path = "../crates/email"

[dependencies.weru-session]
optional = true
path = "../crates/session"

[dependencies.weru-macros]
optional = true
path = "../crates/macros"


[features]
default = ["cache", "channel", "database", "email", "session", "macros"]
cache = ["weru-cache"]
channel = ["weru-channel"]
database = ["weru-database"]
email = ["weru-email"]
session = ["weru-session"]
macros = ["weru-macros"]
