[package]
name = "weru-cache"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true

[dependencies.cbor4ii]
optional = true
workspace = true

[dev-dependencies]
actix-rt.workspace = true

[features]
default = ["local"]
local = ["_cbor"]

_cbor = ["dep:cbor4ii"]
