[package]
name = "weru-channel"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true

[dependencies.bus]
workspace = true
optional = true

[dependencies.type-map]
workspace = true
optional = true

[dev-dependencies]
actix-rt.workspace = true

[features]
default = ["local"]
local = ["dep:bus", "dep:type-map"]
